<resources>
    <string name="app_name">Bolados</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="facebook_app_id">124605474942543</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb124605474942543</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="welcome_message">Welcome to Bolados app!</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="no_store">Don\'t have store</string>
    <string name="profile">Profile</string>
    <string name="my_store">My Store</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="send_mail">Send email</string>
    <string name="mocked_phone" translatable="false">(11) 3388-6407</string>
    <string name="mock_streetAddress" translatable="false">Random test, Av\nHarlem - NY</string>
    <string name="user_full_name">Username</string>
    <string name="edit_your_informations_below">Edit your informations below</string>
    <string name="email">Email</string>
    <string name="search_location">Find Location</string>
    <string name="my_store_name">Store name</string>
    <string name="save">Save</string>
    <string name="rate_this_store">rate this store</string>
    <string name="test_email" translatable="false">contact@email.com</string>
    <string name="test_phone" translatable="false">(11) 3388-6407</string>
    <string name="edit_store_info">Edit store information</string>
    <string name="details">Details</string>
    <string name="login_username">u s e r n a m e</string>
    <string name="login_password">p a s s w o r d</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="signup_email">e m a i l</string>
    <string name="signup_call_bolados">Find delicious stuff in a good price. Become Bolado right now!</string>
    <string name="error_login_invalid">Invalid email or password.</string>
    <string name="login_successful">Login successful</string>
    <string name="profile_creationDate_description">Cake lover since</string>
    <string name="mock_address" translatable="false">Amazing Test, 1004 5th Avenue</string>
    <string name="no_address">Without address associated</string>
    <string name="info_updated">Informations updated</string>
    <string name="error_request">Request error</string>
    <string name="changes_maded">Changes maded successfully</string>
    <string name="email_subject">[BOLADOS] Contact about</string>
    <string name="email_body">Hello...</string>
    <string name="no_email_clients_installed">There are no email clients installed.</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="stay_connected">Stay connected</string>
    <string name="invalid_input">Invalid input</string>
    <string name="serverDateFormat">yyyy-MM-dd</string>
    <string name="title_activity_maps">Map</string>
    <string name="failed_create_store">Failed while creating a new store</string>
    <string name="doesnt_have_store">Doesn\'t have store</string>
    <string name="signout">Signout</string>
    <string name="favorites">Favorites</string>
    <string name="save_favorites">Save to favorites</string>
    <string name="remove_favorites">Remove from favorites</string>
    <string name="developer_since_description">Cake lover since 21/04/1996</string>
    <string name="select_your_address">Select your address</string>
    <string name="select_category">Select category</string>
    <string name="phone_number">Phone number</string>
    <string name="store_description">Store description</string>
    <string name="thanks_for_using_this_app">Thanks for using this app!</string>
    <string name="no_favorites">No favorites where found</string>
</resources>
