<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_store"
            android:title="@string/my_store" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>

</menu>
