<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/defaultPaddingx2">

    <TextView
        style="@style/Bolados.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signup_call_bolados" />

    <!--
    <ImageButton
        android:id="@+id/ibAddPhoto"
        style="@style/Bolados.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_add_photo"
        android:tint="@color/white"
        android:layout_marginTop="@dimen/defaultPaddingx2"/>
    -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tipUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/login_username" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tipEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/signup_email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tipPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btSignup"
        style="@style/Bolados.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="@dimen/defaultPaddingx2"
        android:text="@string/sign_up"
        android:onClick="signup"/>

</LinearLayout>