<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/defaultPaddingx2">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/defaultPaddingx2"
        android:src="@drawable/ic_bolados" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tipUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultPaddingx2">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/login_username"
            android:inputType="text"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tipPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/login_password"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:text="@string/sign_up"
            android:layout_weight="1"
            android:onClick="onSignup"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:text="@string/login"
            android:layout_weight="1"
            style="@style/Bolados.Button.Colored"
            android:onClick="onLogin"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbStayConnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/stay_connected"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btFbLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

</LinearLayout>