<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.ramonilho.bolados.activity.ProfileActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultPadding"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            tools:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Bolados.Title"
                tools:text="@string/user_full_name" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvName"
                android:textSize="@dimen/subtitle1"
                tools:text="Cake lover since 01/01/2017" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_your_informations_below"
        style="@style/Bolados.Title"
        android:textAlignment="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tipName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/user_full_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tipEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email"/>

    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btMap"
        android:drawableLeft="@drawable/ic_map_pin"
        android:text="@string/search_location"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Amazing Test, 1004 5th Avenue"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/colorPrimary"
            android:text="Save"/>

    </LinearLayout>


</LinearLayout>
