<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- HEADER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultPadding"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    style="@style/Bolados.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_full_name" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cake lover since 01/01/2017"
                    android:textSize="@dimen/subtitle1" />
            </LinearLayout>

            <!--<ImageView-->
                <!--android:id="@+id/ivEdit"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/defaultPadding"-->
                <!--android:layout_weight="1"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:layout_gravity="center"-->
                <!--android:tint="@color/colorPrimary"-->
                <!--android:src="@drawable/ic_edit" />-->

        </LinearLayout>

        <!-- EDIT PROFILE -->
        <TextView
            style="@style/Bolados.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultPaddingx2"
            android:text="@string/edit_your_informations_below"
            android:textAlignment="center" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tipName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/user_full_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tipEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_map_pin"
            android:layout_marginTop="@dimen/defaultPaddingx2"
            android:text="@string/search_location" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Amazing Test, 1004 5th Avenue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultPaddingx2">

            <Button
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buttonHeight"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="Save" />

        </LinearLayout>

    </LinearLayout>


</FrameLayout>
