<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ramonilho.bolados.activity.HomeDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultPadding"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_margin="@dimen/defaultPadding"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    tools:src="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="Store name" />

                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvName"
                        android:textSize="15sp"
                        tools:text="Cakes" />

                    <TextView
                        android:id="@+id/tvPriceAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvName"
                        android:layout_toRightOf="@id/tvCategory"
                        android:paddingLeft="5dp"
                        android:textSize="15sp"
                        tools:text="• $$$" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/defaultPadding"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="3.4" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultPadding"
                tools:text="@string/lorem_ipsum" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btEmail"
                    style="@style/Bolados.LinearButton"
                    android:drawableLeft="@drawable/ic_mail"
                    android:onClick="sendEmail"
                    android:text="@string/send_mail" />

                <Button
                    android:id="@+id/btPhone"
                    style="@style/Bolados.LinearButton"
                    android:drawableLeft="@drawable/ic_call"
                    android:onClick="phoneCall"
                    tools:text="@string/mocked_phone" />


            </LinearLayout>

            <Button
                android:id="@+id/btFavorite"
                style="@style/Bolados.LinearButton"
                android:drawableLeft="@drawable/ic_star"
                android:text="@string/save_favorites" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/imagesHeight"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivShowcaseImage1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/ivShowcaseImage2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/imagesHeight"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivShowcaseImage3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/ivShowcaseImage4"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <Button
                android:id="@+id/btMap"
                style="@style/Bolados.LinearButton"
                android:drawableLeft="@drawable/ic_map_pin"
                android:onClick="showMap"
                tools:text="@string/mock_streetAddress" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>
