<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ramonilho.bolados.activity.StoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tipName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etStoreName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/my_store_name"/>

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select category"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/spCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3">
            </Spinner>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btMap"
            android:drawableLeft="@drawable/ic_map_pin"
            android:text="@string/search_location"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Amazing Test, 1004 5th Avenue"
            android:textAlignment="center"/>


        <!--  -->
        <TextView
            android:layout_marginTop="@dimen/defaultPaddingx2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Showcase photos"
            style="@style/Bolados.Title"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/imagesHeight"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivShowcaseImage1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/ivShowcaseImage2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/imagesHeight"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivShowcaseImage3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/ivShowcaseImage4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                tools:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>
